@@ -39,6 +39,9 @@ Index of used prefices
 5 nnn - n-Tree base node
 5 nnt - n-Tree base module
 5 nni - n-Tree base iterator
+5 ncn - n-Tree cell node
+5 nct - n-Tree cell module
+5 nci - n-Tree cell iterator
 ----- - ------------------------------------------------
       - Development
 ----- - ------------------------------------------------
@@ -68,7 +71,7 @@ Index of used prefices
 ----- - ------------------------------------------------
 6 clr - Color module
 5 dts - Datetime text stream
-9     - Big Cell module
+9     - Big Number module
 9     - Big Float module
 9     - Big Fraction module
 9     - Big Complex module
@@ -79,9 +82,6 @@ Index of used prefices
 8 grp - Graph module
 8 gre - GRaph edge module
 8 grn - GRaph node module
-5 nci - n-Tree cell iterator module
-5 nct - n-Tree cell module
-5 ncn - n-Tree cell node
       - red black balanced tree
       - splay tree
 ----- - ------------------------------------------------
@@ -122,6 +122,7 @@ A     - Font ??
         File viewer
         File editor
         Line editor
+        Info viewer
 ----- - ------------------------------------------------        
 
 ToDo
